--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-dom": "^19.2.0",
     "react-resizable-panels": "^4.6.0",
     "react-router-dom": "^7.13.0",
+    "react-youtube": "^10.1.0",
     "recharts": "2.15.4",
     "shadcn": "^3.7.0",
     "sonner": "^2.0.7",
